@@ -5,11 +5,23 @@
 
     <div class="card mt-2 mb-2 border-warning">
         <div class="card-header">
-            Entrant
+            <div class="row">
+                <div class="col-md-1">
+                    <small>Entrant</small>
+                </div>
 
-            {{ if not $IsChampionshipEvent }}
-                <a class="text-danger btn-delete-entrant float-right" href="#"><i class="fas fa-trash"></i></a>
-            {{ end }}
+                <div class="col-md-3" style="padding-left: 32px; padding-right: 46px;">
+                    <select name="EntrantAutoFill" class="form-control form-control-sm entrant-autofill">
+                        <option value="">Autofill</option>
+                    </select>
+                </div>
+
+                {{ if not $IsChampionshipEvent }}
+                    <div class="col-md-8">
+                        <a class="text-danger btn-delete-entrant float-right" href="#"><i class="fas fa-trash"></i></a>
+                    </div>
+                {{ end }}
+            </div>
         </div>
 
         <div class="card-body">
